exports[`test only zip 1`] = `
Array [
  Object {
    "file": "latest-mac.json",
  },
  Object {
    "file": "Test App ßW-1.1.0-mac.zip",
    "safeArtifactName": "TestApp-1.1.0-mac.zip",
  },
]
`;

exports[`test pkg 1`] = `
Array [
  Object {
    "file": "Test App ßW-1.1.0.pkg",
    "safeArtifactName": "TestApp-1.1.0.pkg",
  },
]
`;

exports[`test tar.gz 1`] = `
Array [
  Object {
    "file": "Test App ßW-1.1.0-mac.tar.gz",
    "safeArtifactName": "TestApp-1.1.0-mac.tar.gz",
  },
]
`;
